# Test-Databricks-Integration

./: .editorconfig  .gitattributes  .gitignore  QUICKSTART.md  README.md  databricks.yml  databricks_io.py  example_usage.py  main.py  pyproject.toml  requirements.txt  test-file.py  test_structure.py
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
config/: databricks.yaml  local.yaml
config/data/: sample.csv
specs/001-adb-wheel-package/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-adb-wheel-package/checklists/: requirements.md
specs/001-adb-wheel-package/contracts/: README.md
src/oos_workflow/: __init__.py  main.py
src/oos_workflow/adapters/: __init__.py  base.py  databricks.py  local.py
src/oos_workflow/core/: __init__.py  config.py  workflow.py
